--- a/Bai4.Git and HTML/HTML/BaiTap/BaiTap2.html
+++ b/Bai4.Git and HTML/HTML/BaiTap/BaiTap2.html
@@ -10,7 +10,7 @@
 
 <p>
 <h1>Trần Đức Bo</h1>
-<img src="cf2c3c51aaece5c3398cb698e7cd44d1.jpg" height="200px">
+<img src="" height="200px">
 <br>
     Address: 123 Nguyễn Văn Trỗi, Quận Phú Nhuận,TPHCM
 <br>
